# git_wtf

./: .gitignore  Makefile  README.md  SETUP.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
Formula/: git-wtf.rb
demo/: demo.tape  setup-conflict.sh
git_wtf/: cli.py  config.py  resolver.py  ui.py
git_wtf/collectors/: conflict.py  context.py  git_state.py
git_wtf/commands/: diagnose.py  merge.py  setup.py
git_wtf/llm/: client.py  prompts.py
scripts/: setup-tap.sh
